# Kaku

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/shell-integration/: check_config_version.sh  first_run.sh  setup_zsh.sh
config/derive/: Cargo.toml
crates/color-types/: Cargo.toml
crates/filedescriptor/: Cargo.toml
crates/filedescriptor/src/: windows.rs
crates/procinfo/src/: lib.rs
crates/pty/: Cargo.toml
crates/tabout/: Cargo.toml
crates/vtparse/: Cargo.toml
crates/wezterm-blob-leases/: Cargo.toml
crates/wezterm-cell/: Cargo.toml
crates/wezterm-char-props/: Cargo.toml
crates/wezterm-dynamic/: Cargo.toml
crates/wezterm-dynamic/derive/: Cargo.toml
crates/wezterm-input-types/: Cargo.toml
crates/wezterm-ssh/: Cargo.toml
crates/wezterm-surface/: Cargo.toml
crates/wezterm-toast-notification/src/: lib.rs  noop.rs
crates/wezterm-uds/: Cargo.toml
kaku-gui/: Cargo.toml
kaku-gui/src/: inputmap.rs
kaku-gui/src/termwindow/: clipboard.rs  mod.rs  mouseevent.rs  selection.rs
kaku-gui/src/termwindow/render/: mod.rs  paint.rs  pane.rs  screen_line.rs  tab_bar.rs
kaku/src/: main.rs
lua-api-crates/termwiz-funcs/src/: lib.rs
mux/src/: pane.rs  ssh.rs  termwiztermtab.rs
scripts/: build-linux.sh  build.sh
term/: Cargo.toml
term/src/terminalstate/: mod.rs
term/src/test/: mod.rs
termwiz/: Cargo.toml
termwiz/src/lineedit/: mod.rs
termwiz/src/terminal/: mod.rs
wezterm-gui/src/termwindow/render/: screen_line.rs
window/: Cargo.toml
window/src/os/x11/: window.rs
(+2 files in other folders)
